2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* C/gdm.xml: Update docs for last commit.

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* config/gdm.conf.in:
	* configure.ac:
	* daemon/gdm-daemon-config-entries.h:
	* daemon/gdm-daemon-config-keys.h:
	* daemon/gdm-daemon-config.c: (gdm_daemon_config_to_string),
	(check_servauthdir), (handle_no_displays),
	(gdm_daemon_change_user), (gdm_daemon_check_permissions):
	* daemon/gdm.c: (gdm_daemonify), (gdm_final_cleanup), (main):
	* gui/gdmXnestchooser.c: (main):
	* gui/gdmcomm.c: (gdmcomm_check):
	* gui/gdmlogin.c: (gdm_read_config):
	* gui/greeter/greeter.c: (gdm_read_config):
	Remove the PidFile configuration option.  Fixes #162849

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* docs/C/gdm.xml:
	* daemon/gdm-daemon-config.c: Update some docs.
	* vicious-extensions/: remove external dependency

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	* common/Makefile.am:
	* common/gdm-common-config.c: (gdm_common_config_load_from_dirs),
	(gdm_common_config_get_string),
	(gdm_common_config_get_string_list):
	* common/gdm-common-config.h:
	* common/gdm-common.c: (ve_locale_to_utf8), (ve_locale_from_utf8),
	(ve_locale_exists):
	* common/gdm-common.h:
	* common/gdm-config.c: (gdm_config_error_quark),
	(gdm_config_entry_copy), (gdm_config_entry_free),
	(gdm_config_value_new), (gdm_config_value_free), (set_string),
	(set_string_array), (gdm_config_value_copy),
	(gdm_config_value_get_string), (gdm_config_value_get_bool),
	(gdm_config_value_get_int), (gdm_config_value_compare),
	(gdm_config_value_new_from_string),
	(gdm_config_value_set_string_array), (gdm_config_value_set_int),
	(gdm_config_value_set_bool), (gdm_config_value_set_string),
	(gdm_config_value_to_string), (gdm_config_init), (gdm_config_new),
	(gdm_config_free), (gdm_config_lookup_entry),
	(gdm_config_lookup_entry_for_id), (gdm_config_add_entry),
	(gdm_config_add_static_entries), (gdm_config_set_validate_func),