@@ -769,12 +769,10 @@ AM_CONDITIONAL(DMX_SUPPORT, test x$DMX_SUPPORT = xyes)
 #
 case "$host" in
 *solaris*)
-        ALWAYS_RESTART_SERVER="true"
         AC_CHECK_HEADERS(sys/tsol/label_macro.h,
                 AC_DEFINE(HAVE_TSOL, ,[Building with TSOL support]) found_tsol=yes,)
         ;;
 *)
-        ALWAYS_RESTART_SERVER="false"
         ;;
 esac
 
@@ -1188,8 +1186,6 @@ AC_DEFINE_UNQUOTED(GDM_USER_PATH,"$GDM_USER_PATH")
 AC_SUBST(SOUND_PROGRAM)
 AC_DEFINE_UNQUOTED(SOUND_PROGRAM,"$SOUND_PROGRAM")
 AC_SUBST(GDMGNOMESESSIONCMD)
-AC_SUBST(ALWAYS_RESTART_SERVER)
-AC_DEFINE_UNQUOTED(ALWAYS_RESTART_SERVER,"$ALWAYS_RESTART_SERVER")
 
 AC_SUBST(X_PATH)
 AC_SUBST(X_SERVER)
