@@ -1779,21 +1779,6 @@ Greeter=/usr/lib/gdmgreeter
           </varlistentry>
 
           <varlistentry>
-            <term>AlwaysRestartServer</term>
-            <listitem>
-              <synopsis>AlwaysRestartServer=false</synopsis>
-              <para>
-                If true, then gdm never tries to reuse existing X servers by
-                reinitializing them.  It will just kill the existing X server
-                and start over.  Normally, just reinitializing is a nicer way
-                to go but if the X server memory usage keeps growing this may
-                be a safer option.  On Solaris, this value is always true, and
-                this configuration setting is ignored.
-              </para>
-            </listitem>
-          </varlistentry>
-
-          <varlistentry>
             <term>AlwaysLoginCurrentSession</term>
             <listitem>
               <synopsis>AlwaysLoginCurrentSession=true</synopsis>
