@@ -202,26 +202,6 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkCheckButton" id="a_restart_server_checkbutton">
-		      <property name="visible">True</property>
-		      <property name="tooltip" translatable="yes">Does not reuse existing X servers, but kills them and starts over. Normally, just reinitializing is a nicer way to go but if the X server memory usage keeps growing this may be a safer option.</property>
-		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">_Restart the Xserver with each login</property>
-		      <property name="use_underline">True</property>
-		      <property name="relief">GTK_RELIEF_NORMAL</property>
-		      <property name="focus_on_click">True</property>
-		      <property name="active">False</property>
-		      <property name="inconsistent">False</property>
-		      <property name="draw_indicator">True</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">False</property>
-		      <property name="fill">False</property>
-		    </packing>
-		  </child>
-
-		  <child>
 		    <widget class="GtkCheckButton" id="a_login_curr_session_checkbutton">
 		      <property name="visible">True</property>
 		      <property name="tooltip" translatable="yes">When the user logs in and already has an existing session, they are connected to that session rather than starting a new session.  This only works for session's running on Virtual Terminals started with gdmflexiserver, and not with XDMCP.</property>
