@@ -1,3 +1,9 @@
+2007-03-26  William Jon McCann  <mccann@jhu.edu>
+
+	reviewed by: <delete if not using a buddy>
+
+	* C/gdm.xml:
+
 2007-03-11  Daniel Nylander <po@danielnylander.se>
 
 	* sv/sv.po: Updated Swedish translation.
