@@ -1,5 +1,17 @@
 2007-03-26  William Jon McCann  <mccann@jhu.edu>
 
+	* configure.ac:
+	* daemon/gdm-daemon-config-entries.h:
+	* daemon/gdm-daemon-config-keys.h:
+	* daemon/gdm-daemon-config.c: (gdm_daemon_config_to_string):
+	* daemon/slave.c: (gdm_slave_start):
+	* gui/gdmsetup.c: (setup_general_tab):
+	* gui/gdmsetup.glade:
+	Remove the AlwaysRestartServer configuration option.
+	Fixes part of #326771
+
+2007-03-26  William Jon McCann  <mccann@jhu.edu>
+
 	* C/gdm.xml: Update docs for last commit.
 
 2007-03-26  William Jon McCann  <mccann@jhu.edu>
